WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209048
Crash in TextIterator::node via TextManipulationController::replace
https://bugs.webkit.org/show_bug.cgi?id=209048
Summary
Crash in TextIterator::node via TextManipulationController::replace
Ryosuke Niwa
Reported
2020-03-13 04:59:04 PDT
Fix another crash in TextManipulationController::replace. <
rdar://problem/60400546
>
Attachments
Fixes the bug
(5.30 KB, patch)
2020-03-13 05:04 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Tweaked the fix
(4.95 KB, patch)
2020-03-13 06:05 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2020-03-13 05:04:16 PDT
Created
attachment 393473
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2020-03-13 06:05:14 PDT
Created
attachment 393476
[details]
Tweaked the fix
WebKit Commit Bot
Comment 3
2020-03-13 08:21:03 PDT
Comment on
attachment 393476
[details]
Tweaked the fix Clearing flags on attachment: 393476 Committed
r258399
: <
https://trac.webkit.org/changeset/258399
>
WebKit Commit Bot
Comment 4
2020-03-13 08:21:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug